--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,5 +4,13 @@
   align-items: center;
   justify-content: space-around;
   color: white;
-  padding: 1rem;
+  padding: 1.5rem 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+}
+
+.header h1 {
+  margin: 0;
 }
