--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,4 +1,8 @@
 .button {
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   background: rgb(5, 139, 119);
+  color: white;
+  font-weight: bold;
+  border-radius: 22px;
+  border: 1px solid rgb(5, 139, 119);
 }
